# LSPainter

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.cs  Canvas.h  Color.cs  Frame.cs  Image.cpp  Image.h  ImageHandler.cs  LSPainter.cpp  LSPainter.csproj  LSPainter.h  LSPainter.sln  Math.cs  Painting.cpp  Painting.cs  Painting.h  Program.cs  README.md  RTree.cs  Randomizer.cs  Shader.cs  SimulatedAnnealing.cs  Solution.cpp  Solution.h  SolverManager.cs  Texture.cs  Window.cs  WindowManager.cs  main.cpp  test.cs
Color/: Color.cpp  Color.cs  Color.h  ColorGenerator.cs
DCEL/: DCEL.cs  DCELFace.cs  DCELHalfEdge.cs  DCELSolution.cs  DCELVertex.cs  Face.cs  GeometryGenerator.cs  HalfEdge.cs  Triangulation.cs  Vertex.cs
FiniteShapePainter/: FiniteShapePainterChecker.cs  FiniteShapePainterConstraint.cs  FiniteShapePainterOperation.cs  FiniteShapePainterOperationFactory.cs  FiniteShapePainterScore.cs  FiniteShapePainterSolution.cs
Geometry/: DCEL.cs  Face.cs  GeometryGenerator.cs  HalfEdge.cs  PlanarSubdivision.cs  Triangulation.cs  Vertex.cs
LSSolver/: PiTest.cs  Solution.cs  Solver.cs  SolverFactory.cs  SolverManager.cs
Maths/: BoundingBox.cs  Circle.cs  Edge.cs  LineSegment.cs  Point.cs  Polygon.cs  Rectangle.cs  Shape.cs  Triangle.cs  Triangulation.cs  Vector.cs  Vertex.cs
PlanarSubdivision/: PlanSubChange.cs  PlanSubChangeGenerator.cs  PlanSubSolution.cs  PlanSubSolver.cs  PlanarSubdivisionChange.cs  PlanarSubdivisionSolution.cs  PlanarSubdivisionSolver.cs
Shaders/: shader.frag
Shape/: Circle.cs  Shape.cs  ShapeGenerator.cs  Triangle.cs
Shapes/: Shape.h  (+2 more)
(+132 files in other folders)
